--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+    width: 600px;
+    margin: auto;
+    margin-top: 50px;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+.name{
+    width: 200px
+}
+.adr{
+    width: 140px;
+}
+.phone{
+    width: 220px;
+}
+.my_bold{
+    font-weight: bold;
+    padding-bottom: 20px;
 }
